--- a/app/views/participants/show.html.haml
+++ b/app/views/participants/show.html.haml
@@ -25,4 +25,7 @@
 %p
   %b= t 'global.task'
   = @participant.tasks.length
+%p
+  %b= t 'formtastic.labels.participant.description'
+  = @participant.description
 
