--- a/app/views/account/_tasklogs.html.haml
+++ b/app/views/account/_tasklogs.html.haml
@@ -12,28 +12,37 @@
       %th= t 'task.worker'
       %th= t 'global.price'
       %th= t 'formtastic.labels.task.status'
-      %th= t 'formtastic.labels.task.description'
+      /
+        %th= t 'formtastic.labels.task.description'
       %th= t 'global.time'
 
-  - @tasks.each do |t|
-    - c = cycle("even", "odd")
-    %tr{:class=>c}
-      - task = Task.where('id = ?', t.task_id).first
-      - unless task.nil?
-        %td= task.id
-        %td= link_to task.title, task
-      - else
-        %td= t.task_id
+  %tbody
+    - @tasks.each do |t|
+      - c = cycle("even", "odd")
+      %tr{:class=>'double'}
+        - task = Task.where('id = ?', t.task_id).first
+        - unless task.nil?
+          %td= task.id
+          %td= link_to task.title.length>10 ? task.title[0,10]+'...' : task.title, task
+        - else
+          %td= t.task_id
+          %td
+        - if session[:view_log] == 'admin'
+          %td= t.user_id
+          %td= t.user_name
+          %td= t.worker_id
+          %td= t.worker_name
+        %td= t.worker_part_name
+        %td= t.price
+        %td= t.local_status
+        %td= l t.created_at, :format => :short
+      %tr
         %td
-      - if session[:view_log] == 'admin'
-        %td= t.user_id
-        %td= t.user_name
-        %td= t.worker_id
-        %td= t.worker_name
-      %td= t.worker_part_name
-      %td= t.price
-      %td= t.local_status
-      %td= t.description
-      %td= l t.created_at, :format => :long
+        %td{:colspan=>8}
+          #task_detail
+            = t.description
 
-= will_paginate @tasks
+  %tfoot
+    %tr
+      %th{:colspan=>9}
+        = will_paginate @tasks
