--- a/app/views/account/_tradelogs.html.haml
+++ b/app/views/account/_tradelogs.html.haml
@@ -1,4 +1,3 @@
-= will_paginate @trades
 %table
   %caption
   %thead
@@ -25,4 +24,7 @@
       %td= t.local_type
       %td= t.description
       %td= l t.created_at, :format => :long
-= will_paginate @trades
+  %tfoot
+    %tr
+      %th{:colspan=>6}
+        = will_paginate @trades
