--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -180,6 +180,7 @@
 	written by Braulio Soncco http://www.buayacorp.com
 */
 table {
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
