--- a/app/views/site/_wiki.html.haml
+++ b/app/views/site/_wiki.html.haml
@@ -1,7 +1,7 @@
 .customer_service
   %h1
     = image_tag('help.png')
-    = t 'site.rule'
+    = t 'site.wiki'
   %ul#customer_service
     - @articles.each do |c|
       %li
