--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -552,3 +552,80 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 #notice_body {
   border-bottom: 1px dotted #0066cc;
 }
+
+/*Google Style Menu */
+
+.gmenu{
+  //font: 13px/27px Arial,sans-serif;
+  margin-left: 200px;
+  color:#3366CC;
+  height:30px;
+  //background: url(/images/back.gif) repeat-x;
+}
+.gmenu a:hover{
+  background-color:#e4ebf8;
+}
+.gmenu a {
+  text-decoration: none;
+  padding: 4px 8px 7px;
+  color:#3366CC;
+  outline:none;
+}
+.gmenu ul{
+  list-style: none;
+  margin:0;
+  padding:0 0 0 10px;
+}
+.gmenu ul li{
+  padding:0;
+  float:left;
+
+}
+.gmenu ul li ul li{
+  padding:0;
+  float:none;
+  margin: 0 0 0 0px;
+  width:100%;
+}
+.gmenu ul li ul{
+  position: absolute;
+  border: 1px solid #C3D1EC;
+  box-shadow: 0 1px 5px #CCCCCC;
+  margin-top: -1px;
+  display:none;
+  padding: 0px 16px 0px 0;
+}
+.active ul{
+  display:block !important; 
+}
+.active a{
+  background-color: white;
+  border: 1px solid #C3D1EC;
+  border-bottom: 0;
+  box-shadow: 0 -1px 5px #CCCCCC;
+  display: block;
+  height: 29px;
+  padding: 0 8px 0 8px;
+  position:relative;
+  z-index: 1;
+}
+.active a:hover{
+  background-color:white;
+}
+.active ul a:hover{
+  background-color:#e4ebf8;
+}
+
+.active ul a{
+  border: 0 !important;
+  box-shadow: 0 0 0 #CCCCCC;
+  border:0;
+  width: 100%;
+}
+.garrow {
+  border-color: #3366CC transparent transparent;
+  border-style: solid dashed dashed;
+  margin-left: 5px;
+  position: relative;
+  top: 20px;
+}
