--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -881,6 +881,103 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
   border-bottom: 1px dotted #0066cc;
 }
 
+/*Google Style Menu */
+/* line 558, ../../../app/stylesheets/site.scss */
+.gmenu {
+  margin-left: 200px;
+  color: #3366CC;
+  height: 30px;
+}
+
+/* line 565, ../../../app/stylesheets/site.scss */
+.gmenu a:hover {
+  background-color: #e4ebf8;
+}
+
+/* line 568, ../../../app/stylesheets/site.scss */
+.gmenu a {
+  text-decoration: none;
+  padding: 4px 8px 7px;
+  color: #3366CC;
+  outline: none;
+}
+
+/* line 574, ../../../app/stylesheets/site.scss */
+.gmenu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0 0 0 10px;
+}
+
+/* line 579, ../../../app/stylesheets/site.scss */
+.gmenu ul li {
+  padding: 0;
+  float: left;
+}
+
+/* line 584, ../../../app/stylesheets/site.scss */
+.gmenu ul li ul li {
+  padding: 0;
+  float: none;
+  margin: 0 0 0 0px;
+  width: 100%;
+}
+
+/* line 590, ../../../app/stylesheets/site.scss */
+.gmenu ul li ul {
+  position: absolute;
+  border: 1px solid #C3D1EC;
+  box-shadow: 0 1px 5px #CCCCCC;
+  margin-top: -1px;
+  display: none;
+  padding: 0px 16px 0px 0;
+}
+
+/* line 598, ../../../app/stylesheets/site.scss */
+.active ul {
+  display: block !important;
+}
+
+/* line 601, ../../../app/stylesheets/site.scss */
+.active a {
+  background-color: white;
+  border: 1px solid #C3D1EC;
+  border-bottom: 0;
+  box-shadow: 0 -1px 5px #cccccc;
+  display: block;
+  height: 29px;
+  padding: 0 8px 0 8px;
+  position: relative;
+  z-index: 1;
+}
+
+/* line 612, ../../../app/stylesheets/site.scss */
+.active a:hover {
+  background-color: white;
+}
+
+/* line 615, ../../../app/stylesheets/site.scss */
+.active ul a:hover {
+  background-color: #e4ebf8;
+}
+
+/* line 619, ../../../app/stylesheets/site.scss */
+.active ul a {
+  border: 0 !important;
+  box-shadow: 0 0 0 #CCCCCC;
+  border: 0;
+  width: 100%;
+}
+
+/* line 625, ../../../app/stylesheets/site.scss */
+.garrow {
+  border-color: #3366CC transparent transparent;
+  border-style: solid dashed dashed;
+  margin-left: 5px;
+  position: relative;
+  top: 20px;
+}
+
 /* line 26, ../../../app/stylesheets/screen.scss */
 body.bp {
   line-height: 1.5;
